MMA-8135 Refaktor GraphQl-consumer til å bruke Spring GraphQl Client